--- a/notebooks/experiments_with_lda.ipynb
+++ b/notebooks/experiments_with_lda.ipynb
@@ -1653,11 +1653,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## LDAvis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pyLDAvis\n",
+    "import pyLDAvis.gensim\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "see PDFs of pyLDAvis output. Not sure why clusters have different numbers in LDAvis output?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pyLDAvis.enable_notebook()\n",
+    "vis = pyLDAvis.gensim.prepare(best.lda, best.bows, best.dictionary)\n",
+    "vis"
+   ]
   }
  ],
  "metadata": {
